Highlight more languages
Using syntax files from https://github.com/xv/ICSharpCode.TextEditor-Lexers/tree/master/SyntaxMode

--- a/Project/ICSharpCode.TextEditor.csproj
+++ b/Project/ICSharpCode.TextEditor.csproj
@@ -204,22 +204,45 @@
     <Compile Include="Src\Document\BookmarkManager\BookmarkEventHandler.cs" />
     <Compile Include="Configuration\AssemblyInfo.cs" />
     <EmbeddedResource Include="Resources\ASPX.xshd" />
-    <EmbeddedResource Include="Resources\BAT-Mode.xshd" />
-    <EmbeddedResource Include="Resources\CPP-Mode.xshd" />
-    <EmbeddedResource Include="Resources\Coco-Mode.xshd" />
-    <EmbeddedResource Include="Resources\CSharp-Mode.xshd" />
-    <EmbeddedResource Include="Resources\HTML-Mode.xshd" />
+    <EmbeddedResource Include="Resources\ActionScript.xshd" />
+    <EmbeddedResource Include="Resources\Ada.xshd" />
+    <EmbeddedResource Include="Resources\ANTLR.xshd" />
+    <EmbeddedResource Include="Resources\Assembly.xshd" />
+    <EmbeddedResource Include="Resources\AutoHotkey.xshd" />
+    <EmbeddedResource Include="Resources\Batch.xshd" />
+    <EmbeddedResource Include="Resources\C#.xshd" />
+    <EmbeddedResource Include="Resources\C++.xshd" />
+    <EmbeddedResource Include="Resources\C.xshd" />
+    <EmbeddedResource Include="Resources\Ceylon.xshd" />
+    <EmbeddedResource Include="Resources\ChucK.xshd" />
+    <EmbeddedResource Include="Resources\Clojure.xshd" />
+    <EmbeddedResource Include="Resources\Cocoa.xshd" />
+    <EmbeddedResource Include="Resources\CoffeeScript.xshd" />
+    <EmbeddedResource Include="Resources\Cool.xshd" />
+    <EmbeddedResource Include="Resources\CSS.xshd" />
+    <EmbeddedResource Include="Resources\D.xshd" />
+    <EmbeddedResource Include="Resources\Dart.xshd" />
+    <EmbeddedResource Include="Resources\Delphi.xshd" />
+    <EmbeddedResource Include="Resources\Eiffel.xshd" />
+    <EmbeddedResource Include="Resources\Elixir.xshd" />
+    <EmbeddedResource Include="Resources\Erlang.xshd" />
+    <EmbeddedResource Include="Resources\F#.xshd" />
+    <EmbeddedResource Include="Resources\Falcon.xshd" />
+    <EmbeddedResource Include="Resources\Fantom.xshd" />
+    <EmbeddedResource Include="Resources\Fortran95.xshd" />
+    <EmbeddedResource Include="Resources\Go.xshd" />
+    <EmbeddedResource Include="Resources\Goovy.xshd" />
+    <EmbeddedResource Include="Resources\Gui4Cli.xshd" />
+    <EmbeddedResource Include="Resources\Haskell.xshd" />
+    <EmbeddedResource Include="Resources\Haxe.xshd" />
+    <EmbeddedResource Include="Resources\HTML.xshd" />
+    <EmbeddedResource Include="Resources\Icon.xshd" />
     <None Include="Resources\ICSharpCode.TextEditor.snk" />
     <EmbeddedResource Include="Resources\TextEditorControl.bmp" />
-    <EmbeddedResource Include="Resources\Java-Mode.xshd" />
-    <EmbeddedResource Include="Resources\JavaScript-Mode.xshd" />
     <EmbeddedResource Include="Resources\Mode.xsd" />
-    <EmbeddedResource Include="Resources\PHP-Mode.xshd" />
     <EmbeddedResource Include="Resources\RightArrow.cur" />
     <EmbeddedResource Include="Resources\SyntaxModes.xml" />
     <EmbeddedResource Include="Resources\Tex-Mode.xshd" />
-    <EmbeddedResource Include="Resources\VBNET-Mode.xshd" />
-    <EmbeddedResource Include="Resources\XML-Mode.xshd" />
     <Compile Include="Src\Util\FileReader.cs" />
     <EmbeddedResource Include="Resources\Boo.xshd" />
     <Compile Include="Src\Gui\DrawableLine.cs" />
@@ -227,7 +250,57 @@
     <Compile Include="Src\Document\HighlightingStrategy\SpanStack.cs" />
     <Compile Include="Src\Util\WeakCollection.cs" />
     <EmbeddedResource Include="Resources\Patch-Mode.xshd" />
-    <EmbeddedResource Include="Resources\Python-Mode.xshd" />
+    <EmbeddedResource Include="Resources\ILYC.xshd" />
+    <EmbeddedResource Include="Resources\INI.xshd" />
+    <EmbeddedResource Include="Resources\Io.xshd" />
+    <EmbeddedResource Include="Resources\Java.xshd" />
+    <EmbeddedResource Include="Resources\JavaScript.xshd" />
+    <EmbeddedResource Include="Resources\JSON.xshd" />
+    <EmbeddedResource Include="Resources\Julia.xshd" />
+    <EmbeddedResource Include="Resources\Just BASIC.xshd" />
+    <EmbeddedResource Include="Resources\KiXtart.xshd" />
+    <EmbeddedResource Include="Resources\Kotlin.xshd" />
+    <EmbeddedResource Include="Resources\Lean.xshd" />
+    <EmbeddedResource Include="Resources\Lisp.xshd" />
+    <EmbeddedResource Include="Resources\Lua.xshd" />
+    <EmbeddedResource Include="Resources\Nemerle.xshd" />
+    <EmbeddedResource Include="Resources\Nim.xshd" />
+    <EmbeddedResource Include="Resources\Objective-C.xshd" />
+    <EmbeddedResource Include="Resources\OCaml.xshd" />
+    <EmbeddedResource Include="Resources\ParaSail.xshd" />
+    <EmbeddedResource Include="Resources\Pascal.xshd" />
+    <EmbeddedResource Include="Resources\PHP.xshd" />
+    <EmbeddedResource Include="Resources\Pike.xshd" />
+    <EmbeddedResource Include="Resources\PowerShell.xshd" />
+    <EmbeddedResource Include="Resources\Prolog.xshd" />
+    <EmbeddedResource Include="Resources\PureScript.xshd" />
+    <EmbeddedResource Include="Resources\Python.xshd" />
+    <EmbeddedResource Include="Resources\R.xshd" />
+    <EmbeddedResource Include="Resources\Registry.xshd" />
+    <EmbeddedResource Include="Resources\Resource.xshd" />
+    <EmbeddedResource Include="Resources\Rexx.xshd" />
+    <EmbeddedResource Include="Resources\Rust.xshd" />
+    <EmbeddedResource Include="Resources\Scala.xshd" />
+    <EmbeddedResource Include="Resources\Scheme.xshd" />
+    <EmbeddedResource Include="Resources\Solidity.xshd" />
+    <EmbeddedResource Include="Resources\Spike.xshd" />
+    <EmbeddedResource Include="Resources\SQF.xshd" />
+    <EmbeddedResource Include="Resources\SQL.xshd" />
+    <EmbeddedResource Include="Resources\Swift.xshd" />
+    <EmbeddedResource Include="Resources\TCL.xshd" />
+    <EmbeddedResource Include="Resources\Thrift.xshd" />
+    <EmbeddedResource Include="Resources\TypeScript.xshd" />
+    <EmbeddedResource Include="Resources\Vala.xshd" />
+    <EmbeddedResource Include="Resources\VBNET.xshd" />
+    <EmbeddedResource Include="Resources\VBScript.xshd" />
+    <EmbeddedResource Include="Resources\Verilog.xshd" />
+    <EmbeddedResource Include="Resources\VHDL.xshd" />
+    <EmbeddedResource Include="Resources\Volt.xshd" />
+    <EmbeddedResource Include="Resources\VS Solution.xshd" />
+    <EmbeddedResource Include="Resources\X10.xshd" />
+    <EmbeddedResource Include="Resources\XC.xshd" />
+    <EmbeddedResource Include="Resources\XML.xshd" />
+    <EmbeddedResource Include="Resources\Xtend.xshd" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
