Use the same LParam to point conversion as other projects in solution

--- a/Project/ICSharpCode.TextEditor.csproj
+++ b/Project/ICSharpCode.TextEditor.csproj
@@ -205,6 +205,7 @@
     </Compile>
     <Compile Include="Src\Document\BookmarkManager\Bookmark.cs" />
     <Compile Include="Src\Document\BookmarkManager\BookmarkEventHandler.cs" />
+    <Compile Include="Src\Util\Win32Util.cs" />
     <EmbeddedResource Include="Resources\ASPX.xshd" />
     <EmbeddedResource Include="Resources\ActionScript.xshd" />
     <EmbeddedResource Include="Resources\Ada.xshd" />
