--- a/ICSharpCode.TextEditor.Sample/ICSharpCode.TextEditor.Sample.csproj
+++ b/ICSharpCode.TextEditor.Sample/ICSharpCode.TextEditor.Sample.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>ICSharpCode.TextEditor.Sample</RootNamespace>
     <AssemblyName>ICSharpCode.TextEditor.Sample</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <RuntimeIdentifier>win</RuntimeIdentifier>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
