--- a/Test/ICSharpCode.TextEditor.Tests.csproj
+++ b/Test/ICSharpCode.TextEditor.Tests.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="HighlightingManagerTests.cs" />
     <Compile Include="DocumentTests.cs" />
     <Compile Include="BlockCommentTests.cs" />
     <Compile Include="FoldingManagerTests.cs" />
